--- a/static/style.css
+++ b/static/style.css
@@ -75,3 +75,17 @@ body {
   flex-grow: 4;
   flex-basis: auto;
 }
+
+#outputBox {
+  position: absolute; /* or fixed, depending on your needs */
+  text-align: center;
+  padding: 10px;
+  left: 50%;
+  top: 80%;
+  z-index: 1000;
+  transform: translateX(-50%);
+  background-color: #2c2c2f;
+
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Optional: Adds a subtle shadow around the div for better distinction. */
+}
