--- a/static/style.css
+++ b/static/style.css
@@ -16,15 +16,10 @@ body {
 }
 
 #ui {
-  /* text-align: center; */
   padding: 10px;
-  display: flex; /* To align the input and button horizontally */
-  /* flex-direction: column; */
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Slight shadow for depth */
-  /* border-radius: 8px;  */
-
+  display: flex;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   gap: 10px;
-  /* flex-basis: auto; */
 }
 
 #ui input {
@@ -44,26 +39,26 @@ body {
 
 #ui input:focus {
   outline: none;
-  border-color: #8ab4f8; /* Light blue accent color when focused, similar to Google's focus color */
+  border-color: #8ab4f8;
 }
 
 #ui button {
-  background-color: #5f6368; /* Google's standard button color for dark mode */
+  background-color: #5f6368;
   padding: 10px 15px;
   border: none;
   border-radius: 4px;
   color: #e8e8e8;
   cursor: pointer;
-  transition: all 0.3s; /* For smooth hover effects */
+  transition: all 0.3s;
 }
 
 #ui button:hover {
-  background-color: #8ab4f8; /* Light blue accent color for button hover */
+  background-color: #8ab4f8;
 }
 
 #ui input.error {
-  border-color: #d93025; /* Google's error red color */
-  box-shadow: 0 0 5px #d93025; /* Add a red shadow for more emphasis */
+  border-color: #d93025;
+  box-shadow: 0 0 5px #d93025;
 }
 
 .input-section input.error::placeholder {
@@ -77,11 +72,11 @@ body {
 }
 
 #outputBox {
-  position: absolute; /* or fixed, depending on your needs */
+  position: absolute;
   text-align: center;
   padding: 10px;
   left: 50%;
-  top: 80%;
+  top: 93%;
   z-index: 1000;
   transform: translateX(-50%);
   background-color: #2c2c2f;
